--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.5",
+    "react-native-datepicker": "^1.7.2",
     "react-native-whc-loading": "^1.0.3"
   },
   "devDependencies": {
